--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="chi">
   <head>
     <meta charset="UTF-8" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <title>ITP经历分享: HTML</title>
   </head>
   <body>
