--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
       </header>
 
       <article>
-        <div class="content">
+        <div class="main-content">
           <h2>工作地点及职位</h2>
 
           <p>
             Quin House, a Private Social Club in Boston, 从Food
             Runner(2024.9-2025.1)到Cook(2025.2-2025.8)
           </p>
+          <div class="image-row">
           <img src="img/quin.jpg" alt="Quin" width="150" height="150" />
           <img src="img/Autumn.jpg" alt="autumn" width="120" height="150" />
           <img src="img/snow.jpg" alt="snow" width="120" height="150" />
+          </div>
 
           <h3>薪资</h3>
 
@@ -38,6 +40,8 @@
           <p>
             每周工作25-30h,上班时间包餐(&kitchen厨师疯狂投喂以下!),每年40h年假+工作时长累积假期(每30h累积1h)
           </p>
+
+          <div class="image-grid">
 
           <img src="img/fl_1.jpg" alt="fl" width="120" height="150" />
           <img src="img/fl_2.HEIC" alt="fl" width="120" height="150" />
@@ -59,6 +63,8 @@
             width="120"
             height="150"
           />
+
+          </div>
 
           <h5>住宿环境</h5>
 
@@ -213,7 +219,10 @@
       </article>
 
       <aside>
-        <header>写给还未出发的人：</header>
+        <header>
+          <div class="title">写给还未出发的人：
+          </div>
+        </header>
 
         <p>
           不知道这篇内容是否有机会被看到，大家都是来自什么样的环境，有什么样的背景，又是什么样的人。一直想为这段ITP之行做一个详细的整理，因为从这些经历里获得了太多，远超出这些文字和图片承载的回忆本身的力量，我想分享，谢谢大家停下来听我讲述。
